# AudioPlayer

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_build.yml  ci_clang-format_check.yml  ci_multiplatform_build.yml
Audio player/: Audio player.sln
Audio player/Audio player/: Audio player.vcxproj  Audio player.vcxproj.filters  Audio_System.cpp  Audio_System.h  Channel.cpp  Channel.h  FileProcessing.h  FileProcessing_MP3.cpp  FileProcessing_OGG.cpp  FileProcessing_WAV.cpp  FileProcessing_WAV.h  Sound.cpp  Sound.h
Audio player/Lib/libogg/lib/x64/: ogg.lib
Audio player/Lib/libvorbis/lib/x64/: vorbis.lib  vorbisenc.lib  vorbisfile.lib
Example/: Example.sln
Example/Example/: Example.cpp  Example.vcxproj  Test.cpp  main.cpp
Example/Lib/AudioPlayer/Include/Audio/: Audio_System.h  Channel.h  FileProcessingFactory.h  FileProcessing_MP3.h  FileProcessing_OGG.h  ReverbParameters.h  Sound.h
src/: CMakeLists.txt
src/audioPlayer/: AudioHelper.cpp  AudioHelper.h  Audio_System.cpp  Audio_System.h  CMakeLists.txt  Channel.cpp  FileProcessing.cpp  FileProcessing.h  FileProcessingFactory.cpp  FileProcessingFactory.h  FileProcessing_MP3.cpp  FileProcessing_MP3.h  FileProcessing_OGG.cpp  FileProcessing_OGG.h  FileProcessing_WAV.cpp  FileProcessing_WAV.h  Sound.cpp
src/example/: CMakeLists.txt  Example.cpp  Test.cpp  main.cpp
